2014-01-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Geometry.h:
	* Sound.cpp:
	* LOD.cpp:
	* X3DBrowserContext.cpp:
	* ScreenGroup.cpp:
	* Billboard.cpp:
	* Coordinate.cpp:
	* X3DFontStyleNode.cpp:
	* ScreenFontStyle.cpp:
	* CoordinateDouble.cpp:
	* GeoCoordinate.cpp:
	* X3DGeometryNode.cpp:
	* VolumeEmitter.vs:
	* VolumeEmitter.cpp:
	* TriangleTree.h:
	* X3DNurbsControlCurveNode.cpp:
	* ParticleSystem.cpp:
	* SurfaceEmitter.cpp:
	* ProximitySensor.cpp: 

2014-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Random.h:
	* VolumeEmitter.vs:
	* SurfaceEmitter.vs:
	* VolumeEmitter.cpp:
	* X3DParticleEmitterNode.h: 

2014-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Box3.h:
	* Line3.h:
	* Plane3.h:
	* VolumeEmitter.vs:
	* VolumeEmitter.cpp:
	* TriangleTree.h:
	* ParticleSystem.cpp:
	* OddEvenMergeSort.h: 

2014-01-22  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* X3DFontStyleNode.cpp:
	* ScreenFontStyle.cpp:
	* X3DGeometryNode.cpp:
	* VolumeEmitter.vs:
	* VolumeEmitter.h:
	* VolumeEmitter.cpp:
	* TriangleTree.h:
	* X3DNurbsControlCurveNode.cpp: 

2014-01-20  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Random.cpp:
	* Random.h:
	* ConeEmitter.vs:
	* VolumeEmitter.vs:
	* VolumeEmitter.h:
	* SurfaceEmitter.vs:
	* PolylineEmitter.vs:
	* VolumeEmitter.cpp:
	* SurfaceEmitter.cpp:
	* X3DParticleEmitterNode.h: 

2014-01-18  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* X3DGeometryNode.h:
	* X3DGeometryNode.cpp:
	* SurfaceEmitter.h:
	* SurfaceEmitter.vs:
	* ParticleSystem.cpp:
	* SurfaceEmitter.cpp:
	* PolylineEmitter.cpp: 

2014-01-17  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* Random.h:
	* Random.cpp:
	* Random.h:
	* ConeEmitter.vs:
	* PointEmitter.vs:
	* ConeEmitter.cpp:
	* Quaternion.h:
	* PointEmitter.cpp:
	* ParticleSystem.h:
	* PolylineEmitter.vs:
	* ParticleSystem.cpp:
	* WindPhysicsModel.h:
	* PolylineEmitter.cpp:
	* WindPhysicsModel.cpp: